# 1231234

projectsssgeometry/: CMakeLists.txt
projectsssgeometry/app/: main.cpp
projectsssgeometry/geometry_lib/: EquilateralTriangle.cpp  EquilateralTriangle.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  Parallelogram.cpp  Parallelogram.h  Quadrilateral.cpp  Quadrilateral.h  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  RightTriangle.cpp  RightTriangle.h  Shape.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
